[package]
name = "queryexe"
version = "0.1.0"
authors = [
    "Aaron Elmore <aelmore@cs.uchicago.edu>",
    "Raul Castro Fernandez <raulcf@uchicago.edu>",
    "Daisy Barbanel", "Noah Banholzer",
    "William Ma <williamma@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path ="../common"}
txn_manager = { path = "../txn_manager"}
memstore = { path = "../memstore"}
sqlparser="= 0.5.0"
log = "0.4.11"
env_logger = "0.7.1"
serde = { version = "1.0.89", features = ["derive"] }
serde_cbor = "0.11.1"

